// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryResponsivePicture [GalleryResponsivePicture hidden] Component basic tests matches the snapshot 1`] = `
<styled.picture
  onLoad={[Function]}
  visible={false}
>
  <source
    key="img-big.jpg_(min-width: 600px)"
    media="(min-width: 600px)"
    srcSet="img-big.jpg"
  />
  <styled.img
    alt="alt"
    src="img.jpg"
  />
</styled.picture>
`;

exports[`GalleryResponsivePicture [GalleryResponsivePicture visible] Component basic tests matches the snapshot 1`] = `
<styled.picture
  onLoad={[Function]}
  visible={true}
>
  <source
    key="img-big.jpg_(min-width: 600px)"
    media="(min-width: 600px)"
    srcSet="img-big.jpg"
  />
  <styled.img
    alt="alt"
    src="img.jpg"
  />
</styled.picture>
`;
